--- a/src/app.sass
+++ b/src/app.sass
@@ -8,7 +8,11 @@
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
+html
+  width: 100%
+  height: 100%
+
 body
   margin: 0
-  display: flex
-  place-items: center
+  width: 100%
+  height: 100%
