--- a/src/app.sass
+++ b/src/app.sass
@@ -17,5 +17,12 @@ body
   width: 100%
   height: 100%
 
+.flex-1
+  flex: 1
+
+a
+  color: inherit
+  text-decoration: none
+
 *
   cursor: url("./matcha_cursor.png") 16 16, auto
